increased swagger defintion : headers mandatory information
