# garganttua-api-spring/garganttua-api-interface-spring-rest-swagger/src/main/java/com/garganttua/api/interfaces/spring/rest/swagger/GGAPIInterfaceSpringRestSwagger.java
@@ -9,10 +9,13 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.databind.JsonNode;
+import com.garganttua.api.security.core.accessRules.BasicGGAPIAccessRule;
+import com.garganttua.api.spec.GGAPIEntityOperation;
 import com.garganttua.api.spec.domain.IGGAPIDomain;
 import com.garganttua.api.spec.engine.IGGAPIEngine;
 import com.garganttua.api.spec.entity.annotations.GGAPIEntity;
 import com.garganttua.api.spec.entity.annotations.GGAPIEntityMandatory;
+import com.garganttua.api.spec.service.GGAPIServiceAccess;
 import com.garganttua.api.spec.service.IGGAPIService;
 import com.garganttua.api.spec.service.IGGAPIServiceInfos;
 import com.github.victools.jsonschema.generator.Option;
@@ -25,8 +28,12 @@ import com.github.victools.jsonschema.module.jackson.JacksonModule;
 import com.github.victools.jsonschema.module.jackson.JacksonOption;
 
 import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.Operation;
 import io.swagger.v3.oas.models.PathItem;
 import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.media.StringSchema;
+import io.swagger.v3.oas.models.parameters.HeaderParameter;
+import io.swagger.v3.oas.models.parameters.Parameter;
 import io.swagger.v3.oas.models.tags.Tag;
 import jakarta.annotation.Nullable;
 import jakarta.validation.constraints.NotNull;
@@ -41,6 +48,15 @@ public class GGAPIInterfaceSpringRestSwagger {
 	
 	@Value(value = "${com.garganttua.api.spring.superTenantId:0}")
 	private String superTenantId = "0";
+	
+	@Value(value = "${com.garganttua.api.interface.spring.rest.ownerIdHeaderName:tenantId}")
+	private String tenantIdHeaderName = "tenantId";
+
+	@Value(value = "${com.garganttua.api.interface.spring.rest.requestedTenantIdHeaderName:requestedTenantId}")
+	private String requestedTenantIdHeaderName = "requestedTenantId";
+
+	@Value(value = "${com.garganttua.api.interface.spring.rest.ownerIdHeaderName:ownerId}")
+	private String ownerIdHeaderName = "ownerId";
 	
 	@Autowired
 	private IGGAPIEngine engine;
@@ -96,51 +112,57 @@ public class GGAPIInterfaceSpringRestSwagger {
 		this.openApi.getComponents().addSchemas("ResponseObject", templateOpenApi.getComponents().getSchemas().get("ResponseObject"));
 		this.openApi.getComponents().addSchemas("SortQuery", templateOpenApi.getComponents().getSchemas().get("SortQuery"));
 		this.openApi.getComponents().addSchemas("FilterQuery", templateOpenApi.getComponents().getSchemas().get("FilterQuery"));
-	
-//		if (domain.isAllowReadAll()) {
-//			this.openApi.path(baseUrl, pathItemBase.get(templateOpenApi.getPaths().get(baseUrl).getGet().description("Access : ["+domain.read_all_access+"] - Authority ["+(domain.read_all_authority==false?"none":BasicGGAPIAccessRule.getAuthority(domain.entity.getValue1().domain().toLowerCase(), GGAPICrudOperation.read_all))+"]")));
-//		}
-//		if (domain.isAllowDeleteAll()) {
-//			this.openApi.path(baseUrl, pathItemBase.delete(templateOpenApi.getPaths().get(baseUrl).getDelete().description("Access : ["+domain.delete_all_access+"] - Authority ["+(domain.delete_all_authority==false?"none":BasicGGAPIAccessRule.getAuthority(domain.entity.getValue1().domain().toLowerCase(), GGAPICrudOperation.delete_all))+"]")));
-//		}
-//		if (domain.isAllowCreation()) {
-//			this.openApi.path(baseUrl, pathItemBase.post(templateOpenApi.getPaths().get(baseUrl).getPost().description("Access : ["+domain.creation_access+"] - Authority ["+(domain.creation_authority==false?"none":BasicGGAPIAccessRule.getAuthority(domain.entity.getValue1().domain().toLowerCase(), GGAPICrudOperation.create_one))+"]")));
-//		}
-//		if (domain.isAllowCount()) {
-//			this.openApi.path(baseUrl + "/count", pathItemCount.get(templateOpenApi.getPaths().get(baseUrl + "/count").getGet().description("Access : ["+domain.count_access+"] - Authority ["+(domain.count_authority==false?"none":BasicGGAPIAccessRule.getAuthority(domain.entity.getValue1().domain().toLowerCase(), GGAPICrudOperation.count))+"]")));
-//		}
-//		if (domain.isAllowReadOne()) {
-//			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.get(templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getGet().description("Access : ["+domain.read_one_access+"] - Authority ["+(domain.read_one_authority==false?"none":BasicGGAPIAccessRule.getAuthority(domain.entity.getValue1().domain().toLowerCase(), GGAPICrudOperation.read_one))+"]")));
-//		}
-//		if (domain.isAllowUpdateOne()) {
-//			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.patch(templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getPatch().description("Access : ["+domain.update_one_access+"] - Authority ["+(domain.update_one_authority==false?"none":BasicGGAPIAccessRule.getAuthority(domain.entity.getValue1().domain().toLowerCase(), GGAPICrudOperation.update_one))+"]")));
-//		}
-//		if (domain.isAllowDeleteOne()) {
-//			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.delete(templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getDelete().description("Access : ["+domain.delete_one_access+"] - Authority ["+(domain.delete_one_authority==false?"none":BasicGGAPIAccessRule.getAuthority(domain.entity.getValue1().domain().toLowerCase(), GGAPICrudOperation.delete_one))+"]")));
-//		}
-		
+
 		if (domain.isAllowReadAll()) {
-			this.openApi.path(baseUrl, pathItemBase.get(templateOpenApi.getPaths().get(baseUrl).getGet()));
+			Operation operation = templateOpenApi.getPaths().get(baseUrl).getGet();
+			this.openApi.path(baseUrl, pathItemBase.get(operation.description("<b>Access </b>: ["+domain.getSecurity().readAllAccess()+"] <br> <b>Authority</b>: ["+(domain.getSecurity().readAllAuthority()==false?"none":BasicGGAPIAccessRule.getAuthority(domain.getEntity().getValue1().domain().toLowerCase(), GGAPIEntityOperation.read_all))+"]")));
+			this.addTenantIdHeader(operation, domain.isTenantIdMandatoryForOperation(GGAPIEntityOperation.read_all) );
+			this.addRequestedTenantIdHeader(operation);
+			this.addOwnerIdHeader(operation, domain.isOwnerIdMandatoryForOperation(GGAPIEntityOperation.read_all) );
 		}
 		if (domain.isAllowDeleteAll()) {
-			this.openApi.path(baseUrl, pathItemBase.delete(templateOpenApi.getPaths().get(baseUrl).getDelete()));
+			Operation operation = templateOpenApi.getPaths().get(baseUrl).getDelete();
+			this.openApi.path(baseUrl, pathItemBase.delete(operation.description("<b>Access</b> : ["+domain.getSecurity().deleteAllAccess()+"] <br> <b>Authority</b>: ["+(domain.getSecurity().deleteAllAuthority()==false?"none":BasicGGAPIAccessRule.getAuthority(domain.getEntity().getValue1().domain().toLowerCase(), GGAPIEntityOperation.delete_all))+"]")));
+			this.addTenantIdHeader(operation, domain.isTenantIdMandatoryForOperation(GGAPIEntityOperation.delete_all) );
+			this.addRequestedTenantIdHeader(operation);
+			this.addOwnerIdHeader(operation, domain.isOwnerIdMandatoryForOperation(GGAPIEntityOperation.delete_all) );
 		}
 		if (domain.isAllowCreation()) {
-			this.openApi.path(baseUrl, pathItemBase.post(templateOpenApi.getPaths().get(baseUrl).getPost()));
+			Operation operation = templateOpenApi.getPaths().get(baseUrl).getPost();
+			this.openApi.path(baseUrl, pathItemBase.post(operation.description("<b>Access</b> : ["+domain.getSecurity().creationAccess()+"] <br> <b>Authority</b>: ["+(domain.getSecurity().creationAuthority()==false?"none":BasicGGAPIAccessRule.getAuthority(domain.getEntity().getValue1().domain().toLowerCase(), GGAPIEntityOperation.create_one))+"]")));
+			this.addTenantIdHeader(operation, domain.isTenantIdMandatoryForOperation(GGAPIEntityOperation.create_one) );
+			this.addRequestedTenantIdHeader(operation);
+			this.addOwnerIdHeader(operation, domain.isOwnerIdMandatoryForOperation(GGAPIEntityOperation.create_one) );
 		}
 		if (domain.isAllowCount()) {
-			this.openApi.path(baseUrl + "/count", pathItemCount.get(templateOpenApi.getPaths().get(baseUrl + "/count").getGet()));
+			Operation operation = templateOpenApi.getPaths().get(baseUrl + "/count").getGet();
+			this.openApi.path(baseUrl + "/count", pathItemCount.get(operation.description("<b>Access</b> : ["+domain.getSecurity().countAccess()+"] <br> <b>Authority</b>: ["+(domain.getSecurity().countAuthority()==false?"none":BasicGGAPIAccessRule.getAuthority(domain.getEntity().getValue1().domain().toLowerCase(), GGAPIEntityOperation.count))+"]")));
+			this.addTenantIdHeader(operation, domain.isTenantIdMandatoryForOperation(GGAPIEntityOperation.count) );
+			this.addRequestedTenantIdHeader(operation);
+			this.addOwnerIdHeader(operation, domain.isOwnerIdMandatoryForOperation(GGAPIEntityOperation.count) );
 		}
 		if (domain.isAllowReadOne()) {
-			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.get(templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getGet()));
+			Operation operation = templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getGet();
+			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.get(operation.description("<b>Access</b> : ["+domain.getSecurity().readOneAccess()+"] <br> <b>Authority</b>: ["+(domain.getSecurity().readOneAuthority()==false?"none":BasicGGAPIAccessRule.getAuthority(domain.getEntity().getValue1().domain().toLowerCase(), GGAPIEntityOperation.read_one))+"]")));
+			this.addTenantIdHeader(operation, domain.isTenantIdMandatoryForOperation(GGAPIEntityOperation.read_one) );
+			this.addRequestedTenantIdHeader(operation);
+			this.addOwnerIdHeader(operation, domain.isOwnerIdMandatoryForOperation(GGAPIEntityOperation.read_one) );
 		}
 		if (domain.isAllowUpdateOne()) {
-			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.patch(templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getPatch()));
+			Operation operation = templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getPatch();
+			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.patch(operation.description("<b>Access</b> : ["+domain.getSecurity().updateOneAccess()+"] <br> <b>Authority</b>: ["+(domain.getSecurity().updateOneAuthority()==false?"none":BasicGGAPIAccessRule.getAuthority(domain.getEntity().getValue1().domain().toLowerCase(), GGAPIEntityOperation.update_one))+"]")));
+			this.addTenantIdHeader(operation, domain.isTenantIdMandatoryForOperation(GGAPIEntityOperation.update_one) );
+			this.addRequestedTenantIdHeader(operation);
+			this.addOwnerIdHeader(operation, domain.isOwnerIdMandatoryForOperation(GGAPIEntityOperation.update_one) );
 		}
 		if (domain.isAllowDeleteOne()) {
-			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.delete(templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getDelete()));
+			Operation operation = templateOpenApi.getPaths().get(baseUrl + "/{uuid}").getDelete();
+			this.openApi.path(baseUrl + "/{uuid}", pathItemUuid.delete(operation.description("<b>Access</b> : ["+domain.getSecurity().deleteOneAccess()+"] <br> <b>Authority</b>: ["+(domain.getSecurity().deleteOneAuthority()==false?"none":BasicGGAPIAccessRule.getAuthority(domain.getEntity().getValue1().domain().toLowerCase(), GGAPIEntityOperation.delete_one))+"]")));
+			this.addTenantIdHeader(operation, domain.isTenantIdMandatoryForOperation(GGAPIEntityOperation.delete_one) );
+			this.addRequestedTenantIdHeader(operation);
+			this.addOwnerIdHeader(operation, domain.isOwnerIdMandatoryForOperation(GGAPIEntityOperation.delete_one) );
 		}
-	
+
 //			for( IGGAPICustomService cservice: customServices ) {
 //				PathItem pathItem = new PathItem();
 //				Operation operation = new Operation();
@@ -148,6 +170,38 @@ public class GGAPIInterfaceSpringRestSwagger {
 //
 //				this.openApi.get().path(cservice.getPath(), pathItem);
 //			}
+	}
+
+	private void addOwnerIdHeader(Operation operation, boolean tenantIdMandatoryForOperation) {
+		if( tenantIdMandatoryForOperation ) {
+			List<Parameter> params = operation.getParameters();
+			HeaderParameter param = new HeaderParameter();
+			param.setName(this.ownerIdHeaderName);
+			param.setRequired(tenantIdMandatoryForOperation);
+			param.setSchema(new StringSchema());
+			params.add(param);
+			operation.setParameters(params);
+		}
+	}
+
+	private void addRequestedTenantIdHeader(Operation operation) {
+		List<Parameter> params = operation.getParameters();
+		HeaderParameter param = new HeaderParameter();
+		param.setName(this.requestedTenantIdHeaderName);
+		param.setRequired(false);
+		param.setSchema(new StringSchema());
+		params.add(param);
+		operation.setParameters(params);
+	}
+
+	private void addTenantIdHeader(Operation operation, boolean mandatory) {
+		List<Parameter> params = operation.getParameters();
+		HeaderParameter param = new HeaderParameter();
+		param.setName(this.tenantIdHeaderName);
+		param.setRequired(mandatory);
+		param.setSchema(new StringSchema());
+		params.add(param);
+		operation.setParameters(params);
 	}
 	
 	private String test(Class<?> clazz) {
